--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>GC编程交流学习中心</title>
+        <title>Yu Bowen 解题中心</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="GC编程交流学习中心" />
-        <meta name="keywords" content="GC, 编程, 学习, 交流, 在线, coding, programming, forum, active" />
+        <meta name="description" content="Yu Bowen 解题中心" />
+        <meta name="keywords" content="Yu Bowen,bowen,yu" />
         <meta name="author" content="Codrops" />
-        <link rel="shortcut icon" href="http://www.gscgsoding.mmkfc.com/favicon.ico"> 
+        <link rel="shortcut icon" href="./favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style6.css" />
 		
@@ -18,19 +18,19 @@
     </head>
     <body>	
 		<div class="container fix">
-            <h1 style="font-family:KaiTi"><b>欢迎来到GC编程交流学习中心！</b></span></h1>
+            <h1 style="font-family:KaiTi"><b>Welcome to Yu Bowen problem-solving center!</b></span></h1>
             <body style="text-align:center"><img src="./logo.gif"></body>
             <div class="content">
 				<div class="button-wrapper">
                     <a href="http://www.gcbbs.ga" class="a-btn">
                         <span></span>
 						<span style="font-family:KaiTi"><b>论坛</b></span>
-                        <span style="font-family:KaiTi">进入论坛</span>
+                        <span style="font-family:KaiTi">解题论坛</span>
 					</a>
                     <a href="https://www.code004.ml" class="a-btn">
                         <span></span>
 						<span style="font-family:KaiTi"><b>课程</b></span>
-                        <span style="font-family:KaiTi">编程课程</span>
+                        <span style="font-family:KaiTi">学科课程</span>
 					</a>
 					<a href="login" class="a-btn">
                         <span></span>
@@ -45,12 +45,12 @@
 					<a href="about_us" class="a-btn">
                         <span></span>
 						<span style="font-family:KaiTi"><b>关于</b></span>	
-                        <span style="font-family:KaiTi">关于我们</span>
+                        <span style="font-family:KaiTi">关于博文</span>
 					</a>
                     <a href="ziliao" class="a-btn">
                         <span></span>
 						<span style="font-family:KaiTi"><b>资料</b></span>	
-                        <span style="font-family:KaiTi">查询资料</span>
+                        <span style="font-family:KaiTi">博文资料</span>
 					</a>
 				</div>
             </div>
