--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>	
 		<div class="container fix">
             <h1 style="font-family:KaiTi"><b>Welcome to Yu Bowen problem-solving center!</b></span></h1>
-            <body style="text-align:center"><img src="./logo.gif"></body>
+            <body style="text-align:center"><img src="https://raw.githubusercontent.com/code004Accepted/Yu-Bowen/master/logo.gif"></body>
             <div class="content">
 				<div class="button-wrapper">
                     <a href="http://www.gcbbs.ga" class="a-btn">
