--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
             <body style="text-align:center"><img src="https://raw.githubusercontent.com/code004Accepted/Yu-Bowen/master/logo.gif"></body>
             <div class="content">
 				<div class="button-wrapper">
-                    <a href="http://www.gcbbs.ga" class="a-btn">
+                    <a href="https://www.code004.ml" class="a-btn">
                         <span></span>
-						<span style="font-family:KaiTi"><b>论坛</b></span>
-                        <span style="font-family:KaiTi">解题论坛</span>
+						<span style="font-family:KaiTi"><b>周练</b></span>
+                        <span style="font-family:KaiTi">周练答案</span>
 					</a>
                     <a href="https://www.code004.ml" class="a-btn">
                         <span></span>
-						<span style="font-family:KaiTi"><b>课程</b></span>
-                        <span style="font-family:KaiTi">学科课程</span>
+						<span style="font-family:KaiTi"><b>月考</b></span>
+                        <span style="font-family:KaiTi">月考解析</span>
 					</a>
 					<a href="login" class="a-btn">
                         <span></span>
 						<span style="font-family:KaiTi"><b>登录</b></span>
-                        <span style="font-family:KaiTi">立即登录</span>
+                        <span style="font-family:KaiTi">登录博文</span>
 					</a>
 					<a href="register" class="a-btn">
                         <span></span>
 						<span style="font-family:KaiTi"><b>注册</b></span>		
-                        <span style="font-family:KaiTi">加入我们</span>
+                        <span style="font-family:KaiTi">加入博文</span>
 					</a>
 					<a href="about_us" class="a-btn">
                         <span></span>
@@ -49,8 +49,8 @@
 					</a>
                     <a href="ziliao" class="a-btn">
                         <span></span>
-						<span style="font-family:KaiTi"><b>资料</b></span>	
-                        <span style="font-family:KaiTi">博文资料</span>
+						<span style="font-family:KaiTi"><b>百科</b></span>	
+                        <span style="font-family:KaiTi">博文百科</span>
 					</a>
 				</div>
             </div>
