--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>GSCG编程讨论交流-登录</title>
+        <title>博文-登录</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -23,13 +23,13 @@
     <body>
 
         <div class="page-container">
-            <p><font face="KaiTi" size="6">欢迎您登录GC编程交流学习中心！</font></p>
+            <p><font face="KaiTi" size="6">欢迎您登录博文解题中心！</font></p>
 			<br>
-            <p><font face="KaiTi" size="5">请使用 GC论坛 或 FCP协会 的账号登录！</font></p>
+            <p><font face="KaiTi" size="5">请使用 Yu-Bowen 或 博文助威团 的账号登录！</font></p>
 			<br>
 			<p><font face="KaiTi" size="4">登录完成后请手动返回到主页！</font></p>
 			<br>
-			<p><font face="KaiTi" size="3">登录系统尚未完善，请于<a href="http://www.gcbbs.ga">GC程序员论坛</a>进行登录</font></p>
+			<p><font face="KaiTi" size="3">登录系统尚未完善，请于<a href="http://www.code004.ml">博文助威团</a>进行登录</font></p>
 			<p><font face="KaiTi" size="3">第三方登录正在配置中，请勿点击下面的按钮！</font></p>
             <form action="" method="post">
                 <input type="text" name="username" class="username" placeholder="用户名" style="font-family:KaiTi">
