--- a/login/index.html
+++ b/login/index.html
@@ -25,7 +25,7 @@
         <div class="page-container">
             <p><font face="KaiTi" size="6">欢迎您登录博文解题中心！</font></p>
 			<br>
-            <p><font face="KaiTi" size="5">请使用 Yu-Bowen 或 博文助威团 的账号登录！</font></p>
+            <p><font face="KaiTi" size="5">请使用 <font color="red">Bowen</font> 或 <font color="red">博文助威团</font> 的账号登录！</font></p>
 			<br>
 			<p><font face="KaiTi" size="4">登录完成后请手动返回到主页！</font></p>
 			<br>
