--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>	
 		<div class="container fix">
             <h1 style="font-family:KaiTi"><b>Welcome to Yu Bowen problem-solving center!</b></span></h1>
-            <body style="text-align:center"><img src="https://i.loli.net/2019/04/15/5cb4a18dd9d6a.gif"></body>
+            <body style="text-align:center"><img src="./logo.gif"></body>
             <div class="content">
 				<div class="button-wrapper">
                     <a href="https://www.code004.ml" class="a-btn">
